# tcp-metric-collector

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tcp_metrics_collector.py
.github/workflows/: ci.yml
docs/: design.md
tests/: test_cli.py  test_parser.py
tests/fixtures/: ss_closing.txt  ss_estab_single.txt  ss_ipv6.txt  ss_multiple_sessions.txt  ss_no_metrics.txt  ss_no_wscale.txt  ss_send_doublespace.txt  ss_send_only.txt
