[project]
name = "tcp-metric-collector"
version = "0.2.0"
description = "Collects TCP metrics per destination IP on Linux using ss socket statistics"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
]

[project.scripts]
tcp-metric-collector = "tcp_metrics_collector:run"

[tool.hatch.build.targets.wheel]
packages = ["tcp_metrics_collector.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
