[project]
name = "tcp-metric-collector"
version = "0.4.0"
description = "Collects TCP metrics per destination IP via Linux inet_diag netlink"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.8",
    "pyroute2>=0.7",
]

[project.scripts]
tcp-metric-collector = "tcp_metrics_collector:run"

[tool.hatch.build.targets.wheel]
packages = ["tcp_metrics_collector.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "tomli>=2.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
